# AxiomSync

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  process-compose.yaml
axiomsync-kernel-redesign-package/proposed/: Cargo.toml
axiomsync-kernel-redesign-package/proposed/docs/: API_CONTRACT.md  RUNTIME_ARCHITECTURE.md
axiomsync-kernel-redesign-package/proposed/examples/: raw_event_batch.json
axiomsync-kernel-redesign-package/proposed/schema/: kernel_sink_contract.json  query_contract.json
crates/axiomme-cli/: Cargo.toml  README.md
crates/axiomme-cli/src/cli/: tests.rs
crates/axiomme-cli/src/commands/: mod.rs  support.rs  tests.rs  validation.rs
crates/axiomme-core/: Cargo.toml
crates/axiomme-core/src/: context_ops.rs  embedding.rs  index.rs  mime.rs  release_gate.rs
crates/axiomme-core/src/client/: indexing.rs  markdown_editor.rs  mirror_outbox.rs  runtime.rs
crates/axiomme-core/src/config/: om.rs
crates/axiomme-core/src/models/: mod.rs
crates/axiomme-core/src/om/: mod.rs
crates/axiomme-core/src/release_gate/: contract_probe.rs  episodic_semver.rs  test_support.rs  tests.rs
crates/axiomme-core/src/retrieval/: expansion.rs  planner.rs
crates/axiomme-core/src/session/: om.rs  tests.rs
crates/axiomme-core/src/state/: migration.rs  mod.rs  tests.rs
crates/axiomme-core/tests/: om_parity_fixtures.rs  om_runtime_behavior_validation.rs
crates/axiomme-core/tests/fixtures/: release_contract_fixture.json
crates/axiomme-mobile-ffi/: Cargo.toml  README.md
crates/axiomnexus-cli/: Cargo.toml  README.md
crates/axiomnexus-cli/src/cli/: args.rs  benchmark.rs  document.rs  mod.rs  parsers.rs  relation.rs  release.rs  security.rs  tests.rs
crates/axiomnexus-cli/src/commands/: handlers.rs  mod.rs  ontology.rs  queue.rs  support.rs  tests.rs  validation.rs  web.rs
crates/axiomnexus-cli/tests/: process_contract.rs
crates/axiomnexus-core/: Cargo.toml  README.md  TEST_INTENT.md
crates/axiomnexus-core/src/: catalog.rs  client.rs  embedding.rs  error.rs  evidence.rs  fs.rs  host_tools.rs  index.rs  ingest.rs  lib.rs  om_bridge.rs  pack.rs  parse.rs  quality.rs  queue_policy.rs  relation_documents.rs  release_gate.rs  security_audit.rs  tier_documents.rs  uri.rs
crates/axiomnexus-core/src/client/: indexing.rs  markdown_editor.rs  mirror_outbox.rs  om_bridge.rs  ontology.rs  queue_reconcile.rs  relation.rs  request_log.rs  resource.rs  runtime.rs
crates/axiomnexus-core/src/config/: env.rs  indexing.rs  memory.rs  om.rs  search.rs
crates/axiomnexus-core/src/index/: ancestry.rs  exact.rs  filter.rs  lifecycle.rs  rank.rs  text_assembly.rs
crates/axiomnexus-core/src/models/: defaults.rs  eval.rs  filesystem.rs  mod.rs  queue.rs  release.rs  search.rs  session.rs  trace.rs
crates/axiomnexus-core/src/om/: failure.rs  mod.rs  thread_identity.rs
crates/axiomnexus-core/src/ontology/: model.rs  pressure.rs
crates/axiomnexus-core/src/release_gate/: build_quality.rs  contract_integrity.rs  contract_probe.rs  episodic_semver.rs  policy.rs  test_support.rs  tests.rs  workspace_command.rs
crates/axiomnexus-core/src/retrieval/: budget.rs  engine.rs  mod.rs  scoring.rs  tests.rs
crates/axiomnexus-core/src/session/: archive.rs  context.rs  memory_extractor.rs  meta.rs  mod.rs  om.rs  paths.rs  tests.rs
crates/axiomnexus-core/src/state/: migration.rs  promotion_checkpoint.rs  queue.rs  queue_lane.rs  search.rs  tests.rs
crates/axiomnexus-core/tests/: core_contract_fixture.rs  om_parity_fixtures.rs  om_runtime_behavior_validation.rs  release_contract_fixture.rs
crates/axiomnexus-core/tests/fixtures/: core_contract_fixture.json  release_contract_fixture.json
crates/axiomnexus-mobile-ffi/: Cargo.toml  README.md
crates/axiomnexus-mobile-ffi/examples/swift/: AxiomNexusMobileFFI.swift  AxiommeMobileFFI.swift
crates/axiomnexus-mobile-ffi/include/: axiomme_mobile_ffi.h  axiomnexus_mobile_ffi.h
crates/axiomnexus-mobile-ffi/src/: lib.rs
crates/axiomsync/: Cargo.toml  README.md  TEST_INTENT.md
crates/axiomsync-cli/: Cargo.toml
crates/axiomsync-cli/src/: lib.rs  main.rs
crates/axiomsync-cli/tests/: http_and_mcp.rs  public_surface_guard.rs  relay_interop.rs  replay_pipeline.rs  sink_contract.rs
crates/axiomsync-cli/tests/common/: mod.rs
crates/axiomsync-cli/tests/fixtures/: relay_expected_append_raw_events.json  relay_expected_cursor_upserts.json  relay_packet_batch.json
crates/axiomsync-domain/: Cargo.toml
crates/axiomsync-domain/src/: domain.rs  error.rs  lib.rs  model.rs
crates/axiomsync-domain/src/domain/: canonical.rs  connectors.rs  conversation.rs  derived.rs  enums.rs  planning.rs  search.rs  sink.rs
crates/axiomsync-http/: Cargo.toml
crates/axiomsync-http/src/: lib.rs
crates/axiomsync-kernel/: Cargo.toml
crates/axiomsync-kernel/src/: compat.rs  derive.rs  ingest.rs  kernel.rs  lib.rs  logic.rs  mcp.rs  ports.rs  projection.rs  query.rs
crates/axiomsync-kernel/src/kernel/: auth.rs  mcp.rs  planning.rs  query.rs  sink.rs
crates/axiomsync-kernel/src/logic/: auth.rs  ingest.rs  (+7 more)
crates/axiomsync-mcp/: Cargo.toml
crates/axiomsync-mcp/src/: lib.rs  mcp.rs
crates/axiomsync-store-sqlite/: Cargo.toml
crates/axiomsync-store-sqlite/src/: context_db.rs  lib.rs  schema.sql
crates/axiomsync/assets/: connectors.example.toml  episode_extractor_v1.md  verification_synthesizer_v1.md
crates/axiomsync/src/: auth_store.rs  client.rs  command_line.rs  connector_config.rs  connectors.rs  context_ops.rs  embedding.rs  error.rs  fs.rs  host_tools.rs  http_api.rs  index.rs  jsonl.rs  lib.rs  llm.rs  llm_io.rs  main.rs  markdown_preview.rs  quality.rs  queue_policy.rs  release_gate.rs  security_audit.rs  sink.rs  text.rs  uri.rs  web_ui.rs
crates/axiomsync/tests/: core_contract_fixture.rs  domain_contracts.rs  final_form_compat.rs  http_and_mcp.rs  http_and_mcp_v2.rs  kernel_redesign.rs  live_acceptance.rs  om_parity_fixtures.rs  om_runtime_behavior_validation.rs  process_contract.rs  prohibited_token_policy.rs  public_surface_guard.rs  release_contract_fixture.rs  renewal_kernel.rs  repository_markdown_user_flows.rs  sink_contract.rs
(+435 files in other folders)
