[workspace]
members = [
    "crates/axiomsync-domain",
    "crates/axiomsync-store-sqlite",
    "crates/axiomsync-kernel",
    "crates/axiomsync-http",
    "crates/axiomsync-mcp",
    "crates/axiomsync-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "1.3.1"
license = "Apache-2.0"
authors = ["axient"]
repository = "https://github.com/AxiomOrient/AxiomSync"
homepage = "https://github.com/AxiomOrient/AxiomSync"

[workspace.dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
walkdir = "2.5.0"
globset = "0.4.16"
blake3 = { version = "1.8.2", features = ["no_neon"] }
zip = "4.3.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "rustls-tls", "json"] }
tempfile = "3.21.0"
clap = { version = "4.5.41", features = ["derive"] }
pulldown-cmark = "0.13.0"
serde_norway = "0.9.42"
toml = "0.8.23"
semver = "1.0.27"
axum = { version = "0.8.4", features = ["json", "macros", "tokio"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "net", "signal", "io-std", "io-util"] }
maud = { version = "0.27.0", features = ["axum"] }
sha2 = "0.10.9"
hex = "0.4.3"
tower = "0.5.2"
jsonschema = "0.29.0"
axiomsync-domain = { path = "crates/axiomsync-domain" }
axiomsync-store-sqlite = { path = "crates/axiomsync-store-sqlite" }
axiomsync-kernel = { path = "crates/axiomsync-kernel" }
axiomsync-http = { path = "crates/axiomsync-http" }
axiomsync-mcp = { path = "crates/axiomsync-mcp" }
axiomsync-cli = { path = "crates/axiomsync-cli" }

[profile.dev]
debug = 0
incremental = false
codegen-units = 64

[profile.test]
debug = 0
incremental = false
codegen-units = 64
