[workspace]
members = [
  "crates/axiomsync-domain",
  "crates/axiomsync-kernel",
  "crates/axiomsync-store-sqlite",
  "crates/axiomsync-http",
  "crates/axiomsync-mcp",
  "crates/axiomsync-cli"
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v7"] }
