[package]
name = "axiomme-cli"
version = "0.1.7"
authors = { workspace = true }
edition = { workspace = true }
description = "Command-line interface for AxiomMe data runtime."
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "README.md"
exclude = [
    "../../logs/*",
    "../../target/*",
]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axiomme-core = { version = "0.1.6", path = "../axiomme-core", default-features = false, features = ["host-tools", "markdown-preview"] }

[dev-dependencies]
tempfile = { workspace = true }
