[package]
name = "axiomme-core"
version = "0.1.6"
authors = { workspace = true }
edition = { workspace = true }
description = "Core data-processing engine for AxiomMe local retrieval runtime."
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "README.md"
exclude = [
    "tests/fixtures/*",
    "../../logs/*",
    "../../target/*",
]

[features]
default = ["host-tools"]
host-tools = []
markdown-preview = ["dep:pulldown-cmark"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
blake3 = { workspace = true }
zip = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
serde_norway = { workspace = true }
pulldown-cmark = { workspace = true, optional = true }
toml = { workspace = true }
semver = { workspace = true }
episodic = { version = "0.2.1", git = "https://github.com/AxiomOrient/episodic.git", rev = "53dfe97bc7df8e32dbee5f7b2be862a6da9171c5" }

[dev-dependencies]
tempfile = { workspace = true }
