[package]
name = "axiomme-mobile-ffi"
version = "0.1.1"
authors = { workspace = true }
edition = { workspace = true }
description = "Mobile FFI boundary for AxiomMe core runtime."
license = { workspace = true }
readme = "README.md"
exclude = [
    "examples/swift/*",
    "../../logs/*",
    "../../target/*",
]

[lib]
name = "axiomme_mobile_ffi"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
axiomme-core = { version = "0.1.1", path = "../axiomme-core", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
