[package]
name = "axiomnexus-cli"
version = "0.1.9"
authors = { workspace = true }
edition = { workspace = true }
description = "Command-line interface for AxiomNexus data runtime."
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "README.md"
exclude = [
    "../../logs/*",
    "../../target/*",
]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axiomnexus-core = { version = "0.1.9", path = "../axiomnexus-core", default-features = false, features = ["host-tools", "markdown-preview"] }

[dev-dependencies]
tempfile = { workspace = true }
