[package]
name = "axiomsync-cli"
version = "1.3.1"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axiomsync-domain = { workspace = true }
axiomsync-kernel = { workspace = true }
axiomsync-http = { workspace = true }
axiomsync-mcp = { workspace = true }
axiomsync-store-sqlite = { workspace = true }
