[package]
name = "axiomsync-kernel"
version = "1.3.1"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
axiomsync-domain = { workspace = true }
serde_json = { workspace = true }
