[package]
name = "axiomsync-store-sqlite"
version = "1.4.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
axiomsync-domain = { workspace = true }
axiomsync-kernel = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
