[package]
name = "axiomsync"
version = "1.3.1"
authors = { workspace = true }
edition = { workspace = true }
description = "Conversation-native local kernel, MCP server, and web UI for AxiomSync."
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "README.md"
exclude = [
    "tests/fixtures/*",
    "../../logs/*",
    "../../target/*",
]

[features]
default = []

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
maud = { workspace = true }
tower = { workspace = true }
axiomsync-domain = { workspace = true }
axiomsync-store-sqlite = { workspace = true }
axiomsync-kernel = { workspace = true }
axiomsync-http = { workspace = true }
axiomsync-mcp = { workspace = true }
axiomsync-cli = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rusqlite = { workspace = true }
jsonschema = { workspace = true }
